# WWRA

./: .gitignore  README.md  pyproject.toml
data/: README.md
results/tables/pressure_reliability/: airport_fixed_weather_gap_cells_full_2024_2025.csv  airport_fixed_weather_gap_summary_full_2024_2025.csv  fig2_pressure_state_ladder_full_2024_2025.csv  fig3_weather_bin_workload_gap_full_2024_2025.csv  fig4_weather_workload_surface_full_2024_2025.csv  fig5_excess_burden_capture_curve_full_2024_2025.csv  fig6_climate_fingerprints_full_2024_2025.csv  leave_one_climate_transfer_full_2024_2025.csv  operational_context_stratified_gap_cells_full_2024_2025.csv  operational_context_stratified_gap_summary_full_2024_2025.csv  panel_build_summary_full_2024_2025.csv  sequential_operating_context_adjustment_full_2024_2025.csv  sequential_operating_context_adjustment_summary_full_2024_2025.csv  supplementary_table_s1_airport_results_full_2024_2025.csv  supplementary_table_s2_route_results_full_2024_2025.csv  supplementary_table_s3_month_results_full_2024_2025.csv  supplementary_threshold_robustness_full_2024_2025.csv  table1_sample_closure_full_2024_2025.csv  table1_variable_definitions_full_2024_2025.csv  table3_origin_burden_contribution_full_2024_2025.csv  table3_route_burden_contribution_full_2024_2025.csv  table3_topk_burden_share_full_2024_2025.csv  yearly_burden_concentration_full_2024_2025.csv  (+6 more)
scripts/: build_panel.py  run_core_tables.py  run_operational_robustness.py
src/wwra/: __init__.py  config.py  metrics.py  panel.py  robustness.py  utils.py
tests/: test_imports.py
