[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wwra"
version = "0.1.0"
description = "Weather-Workload Reliability Audit for public airport-route operational reliability data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4",
]

[tool.setuptools.packages.find]
where = ["src"]
